@@ -41,6 +41,7 @@ GCONF_REQUIRED=1.2.0
 LIBGNOME_REQUIRED=2.0.0
 LIBGIO_REQUIRED=2.15.5
 DBUS_REQUIRED=0.61
+LIBCANBERRA_REQUIRED=0.4
 
 dnl -----------------------------------------------------------
 dnl ISO codes, used for aspell support
@@ -139,6 +140,7 @@ PKG_CHECK_MODULES(TWITUX,
 	gtk+-2.0 >= $GTK_REQUIRED
 	glib-2.0 >= $GLIB_REQUIRED
 	gio-2.0 >= $LIBGIO_REQUIRED
+	libcanberra-gtk >= $LIBCANBERRA_REQUIRED
 	libsoup-2.4
 	libnotify
 	$iso_codes_pkgconfig
