@@ -121,6 +121,24 @@
                               </packing>
                             </child>
                             <child>
+                              <object class="GtkCheckButton" id="sound_checkbutton">
+                                <property name="visible">True</property>
+                                <property name="can_focus">True</property>
+                                <property name="label" translatable="yes">S_ound notification when message received</property>
+                                <property name="use_underline">True</property>
+                                <property name="relief">GTK_RELIEF_NORMAL</property>
+                                <property name="focus_on_click">True</property>
+                                <property name="active">False</property>
+                                <property name="inconsistent">False</property>
+                                <property name="draw_indicator">True</property>
+                              </object>
+                              <packing>
+                                <property name="padding">0</property>
+                                <property name="expand">False</property>
+                                <property name="fill">False</property>
+                              </packing>
+                            </child>
+                            <child>
                               <object class="GtkCheckButton" id="names_checkbutton">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
